--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@emotion/cache": "^11.14.0",
     "@mui/material": "^7.3.1",
     "@mui/material-nextjs": "^7.3.0",
+    "ag-grid-community": "^34.1.1",
+    "ag-grid-enterprise": "^34.1.1",
+    "ag-grid-react": "^34.1.1",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -21,12 +24,15 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "moment-timezone": "^0.6.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "zod": "^4.0.17",
