--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@emotion/styled": "^11.14.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-viewport": "^9.0.8",
     "@storybook/nextjs": "^9.1.2",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.84.2",
@@ -35,6 +36,8 @@
     "dayjs": "^1.11.13",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "moment-timezone": "^0.6.0",
     "tailwindcss": "^4",
     "typescript": "^5",
