--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ems-settings",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -39,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-boundaries": "^5.0.1",
     "eslint-plugin-prettier": "^5.5.4",
     "moment-timezone": "^0.6.0",
     "tailwindcss": "^4",
