--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@storybook/addon-viewport": "^9.0.8",
     "@storybook/nextjs": "^9.1.2",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.84.2",
     "@tanstack/react-query-devtools": "^5.84.2",
