--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "i18n": "node src/shared/i18n/script/update.mjs"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -37,11 +38,14 @@
     "@types/tz-lookup": "^6.1.2",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-boundaries": "^5.0.1",
     "eslint-plugin-prettier": "^5.5.4",
+    "google-auth-library": "^10.2.1",
+    "google-spreadsheet": "^5.0.2",
     "moment-timezone": "^0.6.0",
     "tailwindcss": "^4",
     "typescript": "^5",
